- impl navigation.compose - import kotlinx.serialization

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,9 @@
         <activity
             android:name=".navigation.activity.DestinationNavActivity"
             android:exported="false" />
+        <activity
+            android:name=".navigation.compose.ComposeNavActivity"
+            android:exported="false" />
     </application>
 
 
