--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PresentationSampleArchive"
-        tools:targetApi="31" >
+        tools:targetApi="31">
 
         <activity
             android:name=".MainActivity"
@@ -20,6 +20,7 @@
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -37,7 +38,10 @@
         <activity
             android:name=".navigation.compose.ComposeNavActivity"
             android:exported="false" />
-    </application>
 
+        <activity
+            android:name=".navigation.fragment.FragmentNavActivity"
+            android:exported="false" />
+    </application>
 
 </manifest>
