--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,9 +41,13 @@
         <activity
             android:name=".navigation.compose.ComposeNavActivity"
             android:exported="false" />
-
         <activity
             android:name=".navigation.fragment.FragmentNavActivity"
+            android:exported="false" />
+
+        <!-- RecyclerView -->
+        <activity
+            android:name=".recyclerview.RecyclerViewActivity"
             android:exported="false" />
     </application>
 
