--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,7 @@ androidx-compose-compiler = "1.5.4" # used in composeOptions
 hilt = "2.52"
 hilt-ext = "1.1.0"
 orbit = "6.1.0"
+coil = "2.3.0"
 androidxLifecycle = "2.8.4"
 androidx-navigation = "2.8.0"
 androidx-hilt-navigation-compose = "1.2.0"
@@ -49,7 +50,8 @@ hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hil
 orbit-core = { group = "org.orbit-mvi", name = "orbit-core", version.ref = "orbit"}
 orbit-viewmodel = { group = "org.orbit-mvi", name = "orbit-viewmodel", version.ref = "orbit"}
 orbit-compose = { group = "org.orbit-mvi", name = "orbit-compose", version.ref = "orbit"}
-
+coil = { group = "io.coil-kt", name = "coil", version.ref = "coil"}
+coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil"}
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 
 junit = { group = "junit", name = "junit", version.ref = "junit" }
