--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,6 +61,10 @@
         <!-- Paging3 -->
         <activity android:name=".paging.PagingActivity"
             android:exported="false" />
+
+        <!-- LazyColumn -->
+        <activity android:name=".lazylayout.column.LazyColumnActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
