--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 agp = "8.5.1"
-kotlin = "1.9.20"
+kotlin = "1.9.23"
 core-ktx = "1.13.1"
 junit = "4.13.2"
 junit-version = "1.2.1"
@@ -11,7 +11,7 @@ material = "1.12.0"
 androidx-activity = "1.9.1"
 androidx-fragment = "1.8.4"
 androidx-compose-bom = "2024.04.00"
-androidx-compose-compiler = "1.5.4" # used in composeOptions
+androidx-compose-compiler = "1.5.13" # used in composeOptions
 hilt = "2.52"
 hilt-ext = "1.1.0"
 orbit = "6.1.0"
@@ -26,7 +26,10 @@ glide = "4.16.0"
 retrofit = "2.9.0"
 okhttp = "4.12.0"
 uiautomator = "2.2.0"
-benchmarkMacroJunit4 = "1.2.0-beta01"
+
+# Benchmark
+benchmarkMacroJunit4 = "1.3.3"
+androidx-baselineprofile = "1.3.3"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
@@ -85,4 +88,5 @@ kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", versi
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin"}
 android-test = { id = "com.android.test", version.ref = "agp" }
+androidx-baselineprofile = { id = "androidx.baselineprofile", version.ref = "androidx-baselineprofile" }
 
