ci-release workflow

--- a/.github/workflows/ci-release.yml
+++ b/.github/workflows/ci-release.yml
@@ -1,10 +1,7 @@
-name: Debug CI
+name: Release CI
 
 on:
-  push:
-    branches:
-      - *
-
+  workflow_dispatch:
 
 jobs:
   build:
@@ -30,18 +27,11 @@ jobs:
       - name: Run Unit Tests
         run: ./gradlew test
 
-      - name: Upload Test Results
-        if: always()
-        uses: actions/upload-artifact@v3
-        with:
-          name: test-results
-          path: app/build/reports/tests/testDebugUnitTest/
-
       - name: Build APK
-        run: ./gradlew assembleDebug
+        run: ./gradlew assembleRelease
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: app-debug
-          path: app/build/outputs/apk/debug/app-debug.apk
+          name: app-release
+          path: app/build/outputs/apk/debug/app-release.apk
