--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,6 +60,9 @@
         <activity
             android:name=".navigation.fragment.dsl.FragmentNavActivity"
             android:exported="false" />
+        <activity
+            android:name=".navigation.fragment.xml.XmlFragmentNavActivity"
+            android:exported="false" />
 
         <!-- RecyclerView -->
         <activity
