resolves #23 - FLAG_ACTIVITY_FORWARD_RESULT 사용 해보기

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,9 @@
             android:name=".navigation.activity.SourceNavActivity"
             android:exported="false" />
         <activity
+            android:name=".navigation.activity.BridgeNavActivity"
+            android:exported="false" />
+        <activity
             android:name=".navigation.activity.DestinationNavActivity"
             android:exported="false" />
         <activity
